Fix absolute asset paths

--- a/public/explore.html
+++ b/public/explore.html
@@ -6,7 +6,7 @@
   <title>About – Satya Residency</title>
 
   <!-- Tailwind CSS build output -->
-  <link rel="stylesheet" href="/src/style.css" />
+  <link rel="stylesheet" href="public/style.css"/>
 </head>
 
 <body class="bg-white text-gray-900">
@@ -34,7 +34,7 @@
         <!-- Card 1 -->
         <div>
           <img
-            src="photos/WhatsApp Image 2026-02-06 at 20.59.42 (11).jpeg"
+            src="/photos/WhatsApp Image 2026-02-06 at 20.59.42 (11).jpeg"
             alt="Comfortable rooms"
             class="rounded-xl mx-auto"
           />
@@ -50,7 +50,7 @@
         <!-- Card 2 -->
         <div>
           <img
-            src="photos/WhatsApp Image 2026-02-06 at 20.59.42 (4).jpeg"
+            src="/photos/WhatsApp Image 2026-02-06 at 20.59.42 (4).jpeg"
             alt="Clean facilities"
             class="rounded-xl mx-auto"
           />
@@ -66,7 +66,7 @@
         <!-- Card 3 -->
         <div>
           <img
-            src="photos/WhatsApp Image 2026-02-06 at 20.59.42 (5).jpeg"
+            src="/photos/WhatsApp Image 2026-02-06 at 20.59.42 (5).jpeg"
             alt="Hotel amenities"
             class="rounded-xl mx-auto"
           />
@@ -95,7 +95,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-24 items-center">
 
     <img
-      src="photos/WhatsApp Image 2026-02-06 at 20.59.42 (8).jpeg"
+      src="/photos/WhatsApp Image 2026-02-06 at 20.59.42 (8).jpeg"
       alt="Hotel room"
       class="rounded-xl w-120"
     />
@@ -154,7 +154,7 @@
       </div>
 
       <img
-        src="photos/WhatsApp Image 2026-02-06 at 20.59.42 (7).jpeg"
+        src="/photos/WhatsApp Image 2026-02-06 at 20.59.42 (7).jpeg"
         alt="Hotel guests"
         class="rounded-xl w-full"
       />
