--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <link rel="stylesheet" href="/style.css" />
+
 </body>
 
