--- a/public/explore.html
+++ b/public/explore.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About – Satya Residency</title>
 
-  <!-- Tailwind CSS build output -->
-  <link rel="stylesheet" href="public/style.css"/>
+ 
+  <link rel="stylesheet" href="/style.css"/>
 </head>
 
 <body class="bg-white text-gray-900">
