--- a/public/ourhotel.html
+++ b/public/ourhotel.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Hotel – Satya Residency</title>
-  <link rel="stylesheet" href="public/style.css" />
+  <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body class="bg-white text-gray-900">
