--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="src/style.css" />
 
 </body>
 
