--- a/public/explore.html
+++ b/public/explore.html
@@ -6,7 +6,7 @@
   <title>About – Satya Residency</title>
 
  
-  <link rel="stylesheet" href="/style.css"/>
+  <link rel="stylesheet" href="src/style.css"/>
 </head>
 
 <body class="bg-white text-gray-900">
