--- a/public/ourhotel.html
+++ b/public/ourhotel.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Hotel – Satya Residency</title>
-  <link rel="stylesheet" href="src/style.css" />
+  <link rel="stylesheet" href="/src/style.css" />
 </head>
 
 <body class="bg-white text-gray-900">
@@ -50,7 +50,7 @@
     </div>
 
     <img
-      src="/photos/WhatsApp Image 2026-02-06 at 20.59.42 (9).jpeg"
+      src="photos/ourhotel.jpeg"
       alt="Satya Residency building"
       class="rounded-xl w-full"
     />
@@ -63,7 +63,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-20 items-center">
 
     <img
-      src="/photos/Satellite view of Narsapur with Satya Residency.png"
+      src="photos/locationphoto.png"
       alt="Hotel location"
       class="rounded-xl w-full"
     />
