Fix CSS Style for explore and ourhotel page

--- a/public/ourhotel.html
+++ b/public/ourhotel.html
@@ -167,6 +167,6 @@
 
   </div>
 </section>
-<script type="module" src="/src/main.js"></script>
+<script type="module" src="/Users/hariniemmadi/Desktop/SatyaResidency/src/main.js"></script>
 </body>
 </html>
