Fix CSS Style for explore and ourhotel page

--- a/public/ourhotel.html
+++ b/public/ourhotel.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Hotel – Satya Residency</title>
-  <link rel="stylesheet" href="/src/style.css" />
 </head>
 
 <body class="bg-white text-gray-900">
@@ -50,7 +49,7 @@
     </div>
 
     <img
-      src="photos/ourhotel.jpeg"
+      src="/photos/ourhotel.jpeg"
       alt="Satya Residency building"
       class="rounded-xl w-full"
     />
@@ -63,7 +62,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-20 items-center">
 
     <img
-      src="photos/locationphoto.png"
+      src="/photos/locationphoto.png"
       alt="Hotel location"
       class="rounded-xl w-full"
     />
@@ -167,6 +166,6 @@
 
   </div>
 </section>
-<script type="module" src="/Users/hariniemmadi/Desktop/SatyaResidency/src/main.js"></script>
+<script type="module" src="/src/main.js"></script>
 </body>
 </html>
