--- a/public/explore.html
+++ b/public/explore.html
@@ -34,7 +34,7 @@
         <!-- Card 1 -->
         <div>
           <img
-            src="photos/Intro.jpeg"
+            src="/photos/Intro.jpeg"
             alt="Comfortable rooms"
             class="rounded-xl mx-auto"
           />
@@ -50,7 +50,7 @@
         <!-- Card 2 -->
         <div>
           <img
-            src="photos/explore1.jpeg"
+            src="/photos/explore1.jpeg"
             alt="Clean facilities"
             class="rounded-xl mx-auto"
           />
@@ -66,7 +66,7 @@
         <!-- Card 3 -->
         <div>
           <img
-            src="photos/explore2.jpeg"
+            src="/photos/explore2.jpeg"
             alt="Hotel amenities"
             class="rounded-xl mx-auto"
           />
@@ -95,7 +95,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-24 items-center">
 
     <img
-      src="photos/room.jpeg"
+      src="/photos/room.jpeg"
       alt="Hotel room"
       class="rounded-xl w-120"
     />
@@ -154,7 +154,7 @@
       </div>
 
       <img
-        src="photos/explore4.jpeg"
+        src="/photos/explore4.jpeg"
         alt="Hotel guests"
         class="rounded-xl w-full"
       />
