Image and style fixing for vercel deployment

--- a/public/explore.html
+++ b/public/explore.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About – Satya Residency</title>
 
-  <!-- Tailwind CSS build output -->
-  <link rel="stylesheet" href="/src/style.css" />
+  <link rel="stylesheet" href="public/style.css" />
 </head>
 
 <body class="bg-white text-gray-900">
@@ -34,7 +33,7 @@
         <!-- Card 1 -->
         <div>
           <img
-            src="/photos/Intro.jpeg"
+            src="/public/photos/Intro.jpeg"
             alt="Comfortable rooms"
             class="rounded-xl mx-auto"
           />
@@ -50,7 +49,7 @@
         <!-- Card 2 -->
         <div>
           <img
-            src="/photos/explore1.jpeg"
+            src="/public/photos/explore1.jpeg"
             alt="Clean facilities"
             class="rounded-xl mx-auto"
           />
@@ -66,7 +65,7 @@
         <!-- Card 3 -->
         <div>
           <img
-            src="/photos/explore2.jpeg"
+            src="/public/photos/explore2.jpeg"
             alt="Hotel amenities"
             class="rounded-xl mx-auto"
           />
@@ -95,7 +94,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-24 items-center">
 
     <img
-      src="/photos/room.jpeg"
+      src="/public/photos/room.jpeg"
       alt="Hotel room"
       class="rounded-xl w-120"
     />
@@ -154,7 +153,7 @@
       </div>
 
       <img
-        src="/photos/explore4.jpeg"
+        src="/public/photos/explore4.jpeg"
         alt="Hotel guests"
         class="rounded-xl w-full"
       />
