--- a/public/ourhotel.html
+++ b/public/ourhotel.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Hotel – Satya Residency</title>
+  <link rel="stylesheet" href="public/style.css" />
+
 </head>
 
 <body class="bg-white text-gray-900">
@@ -49,7 +51,7 @@
     </div>
 
     <img
-      src="/photos/ourhotel.jpeg"
+      src="/public/photos/ourhotel.jpeg"
       alt="Satya Residency building"
       class="rounded-xl w-full"
     />
@@ -62,7 +64,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-20 items-center">
 
     <img
-      src="/photos/locationphoto.png"
+      src="/public/photos/locationphoto.png"
       alt="Hotel location"
       class="rounded-xl w-full"
     />
@@ -166,6 +168,5 @@
 
   </div>
 </section>
-<script type="module" src="/src/main.js"></script>
 </body>
 </html>
