Image fixing for vercel deployment

--- a/public/ourhotel.html
+++ b/public/ourhotel.html
@@ -51,7 +51,7 @@
     </div>
 
     <img
-      src="/public/photos/ourhotel.jpeg"
+      src="/photos/ourhotel.jpeg"
       alt="Satya Residency building"
       class="rounded-xl w-full"
     />
@@ -64,7 +64,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-20 items-center">
 
     <img
-      src="/public/photos/locationphoto.png"
+      src="/photos/locationphoto.png"
       alt="Hotel location"
       class="rounded-xl w-full"
     />
