--- a/public/explore.html
+++ b/public/explore.html
@@ -33,7 +33,7 @@
         <!-- Card 1 -->
         <div>
           <img
-            src="/public/photos/Intro.jpeg"
+            src="/photos/Intro.jpeg"
             alt="Comfortable rooms"
             class="rounded-xl mx-auto"
           />
@@ -49,7 +49,7 @@
         <!-- Card 2 -->
         <div>
           <img
-            src="/public/photos/explore1.jpeg"
+            src="/photos/explore1.jpeg"
             alt="Clean facilities"
             class="rounded-xl mx-auto"
           />
@@ -65,7 +65,7 @@
         <!-- Card 3 -->
         <div>
           <img
-            src="/public/photos/explore2.jpeg"
+            src="/photos/explore2.jpeg"
             alt="Hotel amenities"
             class="rounded-xl mx-auto"
           />
@@ -94,7 +94,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-24 items-center">
 
     <img
-      src="/public/photos/room.jpeg"
+      src="/photos/room.jpeg"
       alt="Hotel room"
       class="rounded-xl w-120"
     />
@@ -153,7 +153,7 @@
       </div>
 
       <img
-        src="/public/photos/explore4.jpeg"
+        src="/photos/explore4.jpeg"
         alt="Hotel guests"
         class="rounded-xl w-full"
       />
