--- a/src/assets/ourhotel.html
+++ b/src/assets/ourhotel.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Hotel – Satya Residency</title>
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/src/style.css" />
 
 
 </head>
@@ -52,7 +52,7 @@
     </div>
 
     <img
-      src="/photos/ourhotel.jpeg"
+      src="/src/photos/ourhotel.jpeg"
       alt="Satya Residency building"
       class="rounded-xl w-full"
     />
@@ -65,7 +65,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-20 items-center">
 
     <img
-      src="/photos/locationphoto.png"
+      src="/src/photos/locationphoto.png"
       alt="Hotel location"
       class="rounded-xl w-full"
     />
