Image fixing for vercel deployment

--- a/public/assets/ourhotel.html
+++ b/public/assets/ourhotel.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Hotel – Satya Residency</title>
-  <link rel="stylesheet" href="/src/style.css" />
+ <script src="https://cdn.tailwindcss.com"></script>
+
 
 
 </head>
@@ -52,7 +53,7 @@
     </div>
 
     <img
-      src="/src/photos/ourhotel.jpeg"
+      src="../public/photos/ourhotel.jpeg"
       alt="Satya Residency building"
       class="rounded-xl w-full"
     />
@@ -65,7 +66,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-20 items-center">
 
     <img
-      src="/src/photos/locationphoto.png"
+      src="../public/photos/locationphoto.png"
       alt="Hotel location"
       class="rounded-xl w-full"
     />
