--- a/public/assets/explore.html
+++ b/public/assets/explore.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About – Satya Residency</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 
-  <link rel="stylesheet" href="/src/style.css" />
 </head>
 
 <body class="bg-white text-gray-900">
@@ -33,7 +33,7 @@
         <!-- Card 1 -->
         <div>
           <img
-            src="/src/photos/Intro.jpeg"
+            src="../public/photos/Intro.jpeg"
             alt="Comfortable rooms"
             class="rounded-xl mx-auto"
           />
@@ -49,7 +49,7 @@
         <!-- Card 2 -->
         <div>
           <img
-            src="/src/photos/explore1.jpeg"
+            src="../public/photos/explore1.jpeg"
             alt="Clean facilities"
             class="rounded-xl mx-auto"
           />
@@ -65,7 +65,7 @@
         <!-- Card 3 -->
         <div>
           <img
-            src="/src/photos/explore2.jpeg"
+            src="../public/photos/explore2.jpeg"
             alt="Hotel amenities"
             class="rounded-xl mx-auto"
           />
@@ -94,7 +94,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-24 items-center">
 
     <img
-      src="/src/photos/room.jpeg"
+      src="../public/photos/room.jpeg"
       alt="Hotel room"
       class="rounded-xl w-120"
     />
@@ -153,7 +153,7 @@
       </div>
 
       <img
-        src="/src/photos/explore4.jpeg"
+        src="../public/photos/explore4.jpeg"
         alt="Hotel guests"
         class="rounded-xl w-full"
       />
