Image fixing for vercel deployment

--- a/public/assets/ourhotel.html
+++ b/public/assets/ourhotel.html
@@ -53,7 +53,7 @@
     </div>
 
     <img
-      src="../public/photos/ourhotel.jpeg"
+      src="../photos/ourhotel.jpeg"
       alt="Satya Residency building"
       class="rounded-xl w-full"
     />
@@ -66,10 +66,10 @@
               grid grid-cols-1 md:grid-cols-2 gap-20 items-center">
 
     <img
-      src="../public/photos/locationphoto.png"
+      src="../photos/locationphoto.png"
       alt="Hotel location"
       class="rounded-xl w-full"
-    />
+    />F
 
     <div>
       <p class="text-sm tracking-widest text-gray-400 uppercase">
@@ -161,7 +161,7 @@
 
     <div class="text-center mt-16">
       <a
-        href="/rooms.html"
+        href="./rooms.html"
         class="inline-block bg-[#d4af6a] text-white
                px-10 py-4 rounded-md font-semibold">
         VIEW ROOMS
