--- a/public/assets/explore.html
+++ b/public/assets/explore.html
@@ -33,7 +33,7 @@
         <!-- Card 1 -->
         <div>
           <img
-            src="../public/photos/Intro.jpeg"
+            src="../photos/Intro.jpeg"
             alt="Comfortable rooms"
             class="rounded-xl mx-auto"
           />
@@ -49,7 +49,7 @@
         <!-- Card 2 -->
         <div>
           <img
-            src="../public/photos/explore1.jpeg"
+            src="../photos/explore1.jpeg"
             alt="Clean facilities"
             class="rounded-xl mx-auto"
           />
@@ -65,7 +65,7 @@
         <!-- Card 3 -->
         <div>
           <img
-            src="../public/photos/explore2.jpeg"
+            src="../photos/explore2.jpeg"
             alt="Hotel amenities"
             class="rounded-xl mx-auto"
           />
@@ -82,7 +82,7 @@
 
       <a
         class="inline-block mt-16 bg-[#d4af6a]  text-white
-               px-10 py-4 rounded-md font-semibold" href="public/rooms.html">
+               px-10 py-4 rounded-md font-semibold" href="./rooms.html">
         VIEW ROOMS
       </a>
 
@@ -94,7 +94,7 @@
               grid grid-cols-1 md:grid-cols-2 gap-24 items-center">
 
     <img
-      src="../public/photos/room.jpeg"
+      src="../photos/room.jpeg"
       alt="Hotel room"
       class="rounded-xl w-120"
     />
@@ -115,7 +115,7 @@
         every guest enjoys a pleasant and stress-free stay.
       </p>
 
-      <button onclick="location.href='public/rooms.html'" class="mt-8 bg-[#d4af6a] text-white px-8 py-3 rounded-md font-semibold" href="public/rooms.html"> VIEW ROOMS </button>
+      <button onclick="location.href='public/rooms.html'" class="mt-8 bg-[#d4af6a] text-white px-8 py-3 rounded-md font-semibold" href="./rooms.html"> VIEW ROOMS </button>
     </div>
 
   </div>
@@ -146,14 +146,14 @@
 
         <button
   class="mt-8 bg-[#d4af6a] text-white
-         px-8 py-3 rounded-md font-semibold" onclick="location.href='public/rooms.html'">
+         px-8 py-3 rounded-md font-semibold" onclick="location.href='./rooms.html'">
   BOOK YOUR STAY
 </button>
 
       </div>
 
       <img
-        src="../public/photos/explore4.jpeg"
+        src="../photos/explore4.jpeg"
         alt="Hotel guests"
         class="rounded-xl w-full"
       />
