Image fixing for vercel deployment

--- a/public/assets/explore.html
+++ b/public/assets/explore.html
@@ -115,7 +115,7 @@
         every guest enjoys a pleasant and stress-free stay.
       </p>
 
-      <button onclick="location.href='public/rooms.html'" class="mt-8 bg-[#d4af6a] text-white px-8 py-3 rounded-md font-semibold" href="./rooms.html"> VIEW ROOMS </button>
+      <button onclick="location.href='./rooms.html'" class="mt-8 bg-[#d4af6a] text-white px-8 py-3 rounded-md font-semibold" href="./rooms.html"> VIEW ROOMS </button>
     </div>
 
   </div>
