--- a/public/assets/rooms.html
+++ b/public/assets/rooms.html
@@ -292,7 +292,7 @@
   }
 </script>
 <script type="module">
-  import { loadGoogleMaps } from "/src/googleMapsLoader.js";
+  import { loadGoogleMaps } from "./googleMapsLoader.js";
   loadGoogleMaps("initMap");
 </script>
 
